--- a/index.html
+++ b/index.html
@@ -28,12 +28,7 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Theme Name: Reveal
-    Theme URL: https://bootstrapmade.com/reveal-bootstrap-corporate-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
+  
 </head>
 
 
@@ -160,7 +155,7 @@
           <div class="col-lg-6">
               <div class="box wow fadeInLeft">
                   <div class="icon"><i class="fa fa-hospital-o"></i></div> <!-- Ícono de hospital -->
-                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_consultamedica.html">CONSULTA MÉDICA</a></h4>
+                  <h4 class="title"><a href="tablasBD/tabla_consultamedica.html">CONSULTA MÉDICA</a></h4>
                   <p class="description">Registro de consultas médicas: diagnóstico, signos vitales, padecimientos, medicamentos.</p>
               </div>
           </div>
@@ -168,7 +163,7 @@
           <div class="col-lg-6">
               <div class="box wow fadeInRight">
                   <div class="icon"><i class="fa fa-building-o"></i></div> <!-- Ícono de edificio -->
-                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_departamento.html">DEPARTAMENTO</a></h4>
+                  <h4 class="title"><a href="tablasBD/tabla_departamento.html">DEPARTAMENTO</a></h4>
                   <p class="description">Información sobre departamentos: nombre, jefe de departamento.</p>
               </div>
           </div>
@@ -176,7 +171,7 @@
           <div class="col-lg-6">
               <div class="box wow fadeInLeft">
                   <div class="icon"><i class="fa fa-user-md"></i></div> <!-- Ícono de médico -->
-                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_paciente.html">PACIENTE</a></h4>
+                  <h4 class="title"><a href="tablasBD/tabla_paciente.html">PACIENTE</a></h4>
                   <p class="description">Datos personales de pacientes: nombre, género, fecha de nacimiento..</p>
               </div>
           </div>
@@ -184,7 +179,7 @@
           <div class="col-lg-6">
               <div class="box wow fadeInRight" data-wow-delay="0.2s">
                   <div class="icon"><i class="fa fa-medkit"></i></div> <!-- Ícono de botiquín -->
-                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_medicamento.html">MEDICAMENTO</a></h4>
+                  <h4 class="title"><a href="tablasBD/tabla_medicamento.html">MEDICAMENTO</a></h4>
                   <p class "description">Registro de medicamentos: nombre, marca, dosis, fecha de caducidad.</p>
               </div>
           </div>
@@ -192,7 +187,7 @@
           <div class="col-lg-6">
               <div class="box wow fadeInLeft" data-wow-delay="0.4s">
                   <div class="icon"><i class="fa fa-heartbeat"></i></div> <!-- Ícono de corazón -->
-                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_signosvitales.html">SIGNOS VITALES</a></h4>
+                  <h4 class="title"><a href="tablasBD/tabla_signosvitales.html">SIGNOS VITALES</a></h4>
                   <p class="description">Registro de signos vitales: peso, temperatura, presión arterial, altura.</p>
               </div>
           </div>
@@ -200,7 +195,7 @@
           <div class="col-lg-6">
               <div class="box wow fadeInRight" data-wow-delay="0.4s">
                   <div class="icon"><i class="fa fa-stethoscope"></i></div> <!-- Ícono de estetoscopio -->
-                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_padecimiento.html">PADECIMIENTO</a></h4>
+                  <h4 class="title"><a href="tablasBD/tabla_padecimiento.html">PADECIMIENTO</a></h4>
                   <p class="description">Datos de padecimientos: nombre, síntomas, medicamentos asociados.</p>
               </div>
           </div>
