--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <p>Aqui encontraras consultas multitabla</p>
         </div>
         <div class="consulta-menu">
-    <a href="../aenfermeria/consultasMultitabla/menu_de_consultas.html">
+    <a href="consultasMultitabla/menu_de_consultas.html">
         <img src="img/consultas.png" alt="Consultas">
     </a>
 </div>
