--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <!--Formulario de Login y registro-->
                 <div class="contenedor__login-register">
                     <!--Login-->
-                    <form id="loginForm" action="log/login.php" class="formulario__login"     <form id="loginForm" action="login.php" method="post">                        
+                    <form id="loginForm" action="conexion.html" class="formulario__login"     <form id="loginForm" action="login.php" method="post">                        
                         <h2>Iniciar Sesión</h2>
 
                         <label for="username">Usuario:</label>
@@ -48,7 +48,7 @@
                     </form>
 
                     <!--Register-->
-                    <form action="log/registro.php" class="formulario__register"     <form id="loginForm" action="login.php" method="post">
+                    <form action="conexion.html" class="formulario__register"     <form id="loginForm" action="login.php" method="post">
                         <h2>Regístrarse</h2>
                         
                         <label for="username">Usuario:</label>
