--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ if (!$conexion) {
           <div class="col-lg-6">
               <div class="box wow fadeInLeft">
                   <div class="icon"><i class="fa fa-hospital-o"></i></div> <!-- Ícono de hospital -->
-                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_consultamedica.php">CONSULTA MÉDICA</a></h4>
+                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_consultamedica.html">CONSULTA MÉDICA</a></h4>
                   <p class="description">Registro de consultas médicas: diagnóstico, signos vitales, padecimientos, medicamentos.</p>
               </div>
           </div>
@@ -179,7 +179,7 @@ if (!$conexion) {
           <div class="col-lg-6">
               <div class="box wow fadeInRight">
                   <div class="icon"><i class="fa fa-building-o"></i></div> <!-- Ícono de edificio -->
-                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_departamento.php">DEPARTAMENTO</a></h4>
+                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_departamento.html">DEPARTAMENTO</a></h4>
                   <p class="description">Información sobre departamentos: nombre, jefe de departamento.</p>
               </div>
           </div>
@@ -187,7 +187,7 @@ if (!$conexion) {
           <div class="col-lg-6">
               <div class="box wow fadeInLeft">
                   <div class="icon"><i class="fa fa-user-md"></i></div> <!-- Ícono de médico -->
-                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_paciente.php">PACIENTE</a></h4>
+                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_paciente.html">PACIENTE</a></h4>
                   <p class="description">Datos personales de pacientes: nombre, género, fecha de nacimiento..</p>
               </div>
           </div>
@@ -195,7 +195,7 @@ if (!$conexion) {
           <div class="col-lg-6">
               <div class="box wow fadeInRight" data-wow-delay="0.2s">
                   <div class="icon"><i class="fa fa-medkit"></i></div> <!-- Ícono de botiquín -->
-                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_medicamento.php">MEDICAMENTO</a></h4>
+                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_medicamento.html">MEDICAMENTO</a></h4>
                   <p class "description">Registro de medicamentos: nombre, marca, dosis, fecha de caducidad.</p>
               </div>
           </div>
@@ -203,7 +203,7 @@ if (!$conexion) {
           <div class="col-lg-6">
               <div class="box wow fadeInLeft" data-wow-delay="0.4s">
                   <div class="icon"><i class="fa fa-heartbeat"></i></div> <!-- Ícono de corazón -->
-                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_signosvitales.php">SIGNOS VITALES</a></h4>
+                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_signosvitales.html">SIGNOS VITALES</a></h4>
                   <p class="description">Registro de signos vitales: peso, temperatura, presión arterial, altura.</p>
               </div>
           </div>
@@ -211,7 +211,7 @@ if (!$conexion) {
           <div class="col-lg-6">
               <div class="box wow fadeInRight" data-wow-delay="0.4s">
                   <div class="icon"><i class="fa fa-stethoscope"></i></div> <!-- Ícono de estetoscopio -->
-                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_padecimiento.php">PADECIMIENTO</a></h4>
+                  <h4 class="title"><a href="../aenfermeria/tablasBD/tabla_padecimiento.html">PADECIMIENTO</a></h4>
                   <p class="description">Datos de padecimientos: nombre, síntomas, medicamentos asociados.</p>
               </div>
           </div>
@@ -232,7 +232,7 @@ if (!$conexion) {
             <p>Aqui encontrarás consultas multitabla</p>
         </div>
         <div class="consulta-menu">
-    <a href="../aenfermeria/consultasMultitabla/menu_de_consultas.php">
+    <a href="../aenfermeria/consultasMultitabla/menu_de_consultas.html">
         <img src="img/consultas.png" alt="Consultas">
     </a>
 </div>
@@ -252,7 +252,7 @@ if (!$conexion) {
             <p>AQUÍ PODRÁS OBTENER UN PDF CON LAS CONSULTAS</p>
         </div>
         <div class="consulta-menu">
-    <a href="pdf/alepdf.php">
+    <a href="pdf/alepdf.html">
         <img src="img/impresion.png" alt="Consultas">
     </a>
 </div>
